--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,23 @@
 {
-    "name": "php-instagram-api/php-instagram-api",
+    "name": "marketmesuite/php-instagram-api",
     "type": "library",
     "description": "PHP Instagram API for PHP 5.3+",
     "keywords": ["instagram"],
-    "homepage": "https://github.com/galen/PHP-Instagram-API",
+    "homepage": "https://github.com/marketmesuite/PHP-Instagram-API",
     "license": "MIT",
     "authors": [
         {
             "name": "Galen Grover",
             "email": "galenjr@gmail.com",
             "homepage": "http://www.galengrover.com",
+            "role": "Developer"
+        },
+        {
+            "name": "Philipp Tkachev",
+            "role": "Developer"
+        },
+        {
+            "name": "Bill Nunney",
             "role": "Developer"
         }
     ],
